[workspace]
resolver = "3"
members = [ "nut_hid_cli","nut_hid_device", "nut_hid_driver"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Joakim Plate"]

[patch.crates-io]
wdk-build = {git = "https://github.com/elupus/windows-drivers-rs.git", branch = "add_hidport"}
# wdk-build = {path = "C:/Users/Joakim/source/rust/windows-drivers-rs/crates/wdk-build"}
