[package]
name = "nut_hid_cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
widestring = "1.2.0"
windows = { version = "0.61.1", features = ["Win32_Devices_Enumeration_Pnp", "Win32_Devices_Properties", "Win32_Security", "Win32_System_Threading"] }
windows-strings = "0.4.2"
