[package]
name = "nut_hid_driver"
version.workspace = true
edition.workspace = true

[dependencies]
log = "0.4.27"
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-panic = "0.3.1"
wdk-sys = { version = "0.4.0", features = ["hid"] }
nut_hid_device = { path = "../nut_hid_device" }

[build-dependencies]
wdk-build = "0.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 33

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"